[project]
name = "learning-pocketflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.58.2",
    "pocketflow>=0.0.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "fastapi[standard]>=0.115.8",
]
